[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Parar.gd" type="Script" id=1]
[ext_resource path="res://scripts/Interface.gd" type="Script" id=2]

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voltar" type="Button" parent="HBoxContainer"]
margin_right = 216.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "<<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parar" type="Button" parent="HBoxContainer"]
margin_left = 220.0
margin_right = 436.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "||"
script = ExtResource( 1 )

[node name="Avancar" type="Button" parent="HBoxContainer"]
margin_left = 440.0
margin_right = 657.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = ">>"
[connection signal="pressed" from="HBoxContainer/Voltar" to="." method="_on_Voltar_pressed"]
[connection signal="pressed" from="HBoxContainer/Parar" to="HBoxContainer/Parar" method="_on_Parar_pressed"]
[connection signal="pressed" from="HBoxContainer/Avancar" to="." method="_on_Avancar_pressed"]
